tests: add guest event log to results.xml

--- a/tests/worker/public/sti-x86_64-failure.yaml
+++ b/tests/worker/public/sti-x86_64-failure.yaml
@@ -118,6 +118,7 @@ checks:
        </properties>
        <testsuite name="git-main{{ '.+' }}/sti/failure.yaml" result="failed" tests="1">
         <logs>
+         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/{{ artemis_guestname_pattern }}-artemis-guest-log.yaml" name="Guest event log"/>
          <log guest-setup-stage="pre_artifact_installation" href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/guest-setup-{{ artemis_guestname_pattern }}/guest-setup-output-pre-artifact-installation.txt" name="guest setup" schedule-stage="guest-setup"/>
          <log guest-setup-stage="post_artifact_installation" href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/guest-setup-{{ artemis_guestname_pattern }}/guest-setup-output-post-artifact-installation.txt" name="guest setup" schedule-stage="guest-setup"/>
         </logs>
