Archive .pytest which contains test artifacts
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,7 +129,8 @@ direnv:
     expose_as: report
     paths:
       - report.html
-      - assets/
+      - assets/style.css
+      - .pytest/
     when: always
 
 ansible-vault:
