--- a/terragrunt/environments/dev/worker/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/terragrunt/environments/dev/worker/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -16,7 +16,8 @@
 #
 # The play gracefully skips adding a tag repository which is not reachable.
 #
-# Tag repository is enabled only on Fedora Rawhide and CentOS Stream. See https://pagure.io/fedora-ci/general/issue/376.
+# Tag repository is enabled only on Fedora and CentOS Stream.
+# See https://pagure.io/fedora-ci/general/issue/376 for discussion about the current agreement.
 #
 
 - name: Check for rawhide
@@ -56,7 +57,7 @@
     - name: Create tag repository base url (CentOS Stream 8)
       set_fact:
         tag_repository_name: "c8s-build"
-        tag_repository_url: "https://koji.mbox.centos.org/kojifiles/repos/dist-c8-stream-build/latest//{{ ansible_architecture }}/"
+        tag_repository_url: "https://kojihub.stream.centos.org/kojifiles/repos/c8s-build/latest/{{ ansible_architecture }}/"
       when: IMAGE_NAME|lower|regex_search('centos.stream.8')
 
     #
@@ -75,9 +76,8 @@
     #       we encounter might have tag repository available.
     #
     - name: "Check if tag repository {{ tag_repository_url }} exists"
-      command: "bash -c 'curl --head {{ tag_repository_url }} | grep -o -E \"(200|404)\"'"
+      command: "bash -c 'curl --head -L {{ tag_repository_url }} | grep -o -E \"(200|404)\"'"
       register: http_status_code
-
 
     #
     # Add repository only if the repository is reachable
@@ -88,21 +88,20 @@
             src: "templates/tag.repo.j2"
             dest: /etc/yum.repos.d/tag-repository.repo
 
-      when: http_status_code == 200
+      when: http_status_code.stdout == "200"
 
     #
     # Be verbose about the fact the repository is unreachable
     #
     - debug:
         msg: "Skipping adding tag repository, because location {{ tag_repository_url }} was not found"
-      when: http_status_code != 200
+      when: http_status_code.stdout != "200"
 
   #
   # block: end
   #
   when:
-    - (ansible_distribution == "Fedora" and check_rawhide.rc == 0)
-      or IMAGE_NAME|lower|regex_search('centos.stream')
+    - ansible_distribution == "Fedora" or IMAGE_NAME|lower|regex_search('centos.stream')
 
 #
 # Be verbose about the fact we skipped this play
