--- a/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
+++ b/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
@@ -45,4 +45,5 @@ podman_authfile: "{{ ansible_dir }}/secrets/quay/testing-farm-tftbot-auth.json"
 jobs:
   - tf-tmt
   - tf-tmt-container
+  - tf-tmt-multihost
   - tf-sti
