--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
   # GitLab CI runs in world writable directory, we need to explicitely set ANSIBLE_CONFIG
   # https://docs.ansible.com/ansible/devel/reference_appendices/config.html#cfg-in-world-writable-dir
   ANSIBLE_CONFIG: ansible.cfg
+  CI_ARTIFACT_URL_PREFIX: "$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts"
 
 workflow:
   rules:
@@ -185,8 +186,10 @@ test/staging/pipeline:
   variables:
     SCRIPT: >-
       make staging/apply/artemis/ci &&
-      make test/staging/pipeline/ci
-    AFTER_SCRIPT: make staging/destroy/artemis/ci > /dev/null
+      CITOOL_EXTRA_PODMAN_ARGS="-e CI_ARTIFACT_URL_PREFIX=${CI_ARTIFACT_URL_PREFIX}" make test/staging/pipeline/ci
+    AFTER_SCRIPT: >-
+      make test/pytest/oculus
+      make staging/destroy/artemis/ci > /dev/null
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
@@ -202,8 +205,10 @@ test/staging/compose:
   variables:
     SCRIPT: >-
       make staging/apply/artemis/ci &&
-      make test/staging/compose/ci
-    AFTER_SCRIPT: make staging/destroy/artemis/ci > /dev/null
+      CITOOL_EXTRA_PODMAN_ARGS="-e CI_ARTIFACT_URL_PREFIX=${CI_ARTIFACT_URL_PREFIX}" make test/staging/compose/ci
+    AFTER_SCRIPT:
+      make test/pytest/oculus
+      make staging/destroy/artemis/ci > /dev/null
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
