--- a/tests/worker/public/tmt-container-failure.yaml
+++ b/tests/worker/public/tmt-container-failure.yaml
@@ -29,9 +29,9 @@ checks:
        </properties>
        <testsuite name="{{ PLAN }}" result="failed" tests="1">
         <logs>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}/tmt-run.log" name="tmt-log"/>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}" name="workdir"/>
+         <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-failure{{ '.+' }}/tmt-run.log" name="tmt-log"/>
+         <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-failure{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
+         <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-failure{{ '.+' }}" name="workdir"/>
         </logs>
         <properties>
          <property name="baseosci.result" value="failed"/>
@@ -46,8 +46,8 @@ checks:
           <property name="baseosci.variant" value=""/>
          </properties>
          <logs>
-          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/failure-1" name="log_dir" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
-          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/failure-1/output.txt" name="testout.log" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
+          <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-failure{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/failure-1" name="log_dir" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
+          <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-failure{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/failure-1/output.txt" name="testout.log" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
          </logs>
          <failure/>
          <testing-environment name="requested">
