--- a/tests/worker/public/tmt-container-x86_64-merge-sha.yaml
+++ b/tests/worker/public/tmt-container-x86_64-merge-sha.yaml
@@ -29,9 +29,9 @@ checks:
        </properties>
        <testsuite name="{{ PLAN }}" result="passed" tests="1">
         <logs>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}/tmt-run.log" name="tmt-log"/>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}" name="workdir"/>
+         <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-sanity{{ '.+' }}/tmt-run.log" name="tmt-log"/>
+         <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-sanity{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
+         <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-sanity{{ '.+' }}" name="workdir"/>
         </logs>
         <properties>
          <property name="baseosci.result" value="passed"/>
@@ -46,8 +46,8 @@ checks:
           <property name="baseosci.variant" value=""/>
          </properties>
          <logs>
-          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1" name="log_dir" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
-          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1/output.txt" name="testout.log" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
+          <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1" name="log_dir" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
+          <log href="{{ '(https://artifacts.dev.testing-farm.io/)?' }}{{ '(' }}{{ REQUEST_ID }}{{ '/)?' }}work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1/output.txt" name="testout.log" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
          </logs>
          <testing-environment name="requested">
           <property name="arch" value="{{ ARCH }}"/>
