citool-config: fix wrong map for result
Happened here:
https://artifacts.dev.testing-farm.io/f17c2c5d-4d92-4ae4-ba70-f55332e2d7e3/

Reason was seen it debug log:

```
---v---v---v---v---v--- Exception: ---v---v---v---v---v---

At /opt/gluetool/lib/python3.9/site-packages/gluetool_modules_framework/helpers/rules_engine.py:749, in evaluate_instructions:

gluetool.glue.GlueError: No callback for command 'state'
```

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/overall-result-map.yaml
+++ b/ranch/public/citool-config/overall-result-map.yaml
@@ -30,6 +30,6 @@
     EXISTS('ERROR_MESSAGE')
     and ERROR_MESSAGE
     and "TMT metadata are absent or corrupted." in ERROR_MESSAGE
-  state: error
+  result: error
 
 # Default hard-coded rules apply for the rest, based on the test results.
