Prepare for local development environment
1. Remove poetry activation in direnv

The poetry activation will be causing trouble with local development,
where most of the tools are installed via poetry.
Let's not activate it automatically, just add the virtual
env to the PATH so the installed tools are available.

2. Make the `.vault_pass` optional

For local development environment it is not needed. Rather just
a warning for mataintainers, to add the secret file if they want
to use the infrastructure repository as Testing Farm maintainers.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -1,48 +1,20 @@
 #
-# poetry layout
-#
-layout_poetry() {
-  if [[ ! -f pyproject.toml ]]; then
-    log_error 'No pyproject.toml found. Use `poetry new` or `poetry init` to create one first.'
-    exit 2
-  fi
-
-  # create venv if it doesn't exist
-  poetry run true
-
-  export VIRTUAL_ENV=$(poetry env info --path)
-  export POETRY_ACTIVE=1
-  PATH_add "$VIRTUAL_ENV/bin"
-}
-
-#
-# vars
+# global vars
 #
 export PROJECT_ROOT=$(pwd)
 export DIRENV_PATH="$PROJECT_ROOT/.direnv"
 export TOOLS_PATH="$DIRENV_PATH/bin"
 
 #
-# poetry
+# helper
 #
-if [ -n "$VIRTUAL_ENV" ]; then
-    # deactivate any old VIRTUALENV before entering direnv
-    # because deactivate is a function created
-    # by activate script, run it again to have it available
-    . $VIRTUAL_ENV/bin/activate
-    deactivate
-    # deactivate messes with PS1, unset it to mitigate weird error
-    # https://github.com/direnv/direnv/wiki/PS1
-    unset PS1
-fi
-layout_poetry
+IS_MAINTAINER="test -e $PROJECT_ROOT/.vault_pass"
 
 #
 # required
 #
-if [ ! -e "$PROJECT_ROOT/.vault_pass" ]; then
-    echo -e "\e[31m⛔ Please create '.vault_pass' in project root '$PROJECT_ROOT'"
-    exit 1
+if ! $IS_MAINTAINER; then
+    echo -e "\e[33m💡 Create '.vault_pass' in project root '$PROJECT_ROOT' to activate Testing Farm maintainer access."
 fi
 
 #
@@ -58,9 +30,15 @@ fi
 # tools
 #
 PATH_add "$TOOLS_PATH"
+PATH_add "$(poetry run bash -c 'echo $VIRTUAL_ENV')/bin"
 
 #
-# download and setup kubectl
+# Configuration below is only for maintainers
+#
+$IS_MAINTAINER || return
+
+#
+# export AWS credentials
 #
 export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.aws.fedora.access_key)"
 export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.aws.fedora.secret_key)"
