--- a/tests/worker/public/tmt-container-failure.yaml
+++ b/tests/worker/public/tmt-container-failure.yaml
@@ -76,27 +76,27 @@ checks:
       <testsuites>
        <testsuite name="{{ PLAN }}" tests="1" failures="1" errors="0" skipped="0">
         <testcase name="/testing-farm/failure" classname="tests">
-         <system-out>NAME="Fedora Linux"
-      VERSION="38 (Container Image)"
+         <system-out>NAME=&amp;quot;Fedora Linux&amp;quot;
+      VERSION=&amp;quot;38 (Container Image)&amp;quot;
       ID=fedora
       VERSION_ID=38
-      VERSION_CODENAME=""
-      PLATFORM_ID="platform:f38"
-      PRETTY_NAME="Fedora Linux 38 (Container Image)"
-      ANSI_COLOR="0;38;2;60;110;180"
+      VERSION_CODENAME=&amp;quot;&amp;quot;
+      PLATFORM_ID=&amp;quot;platform:f38&amp;quot;
+      PRETTY_NAME=&amp;quot;Fedora Linux 38 (Container Image)&amp;quot;
+      ANSI_COLOR=&amp;quot;0;38;2;60;110;180&amp;quot;
       LOGO=fedora-logo-icon
-      CPE_NAME="cpe:/o:fedoraproject:fedora:38"
-      DEFAULT_HOSTNAME="fedora"
-      HOME_URL="https://fedoraproject.org/"
-      DOCUMENTATION_URL="https://docs.fedoraproject.org/en-US/fedora/f38/system-administrators-guide/"
-      SUPPORT_URL="https://ask.fedoraproject.org/"
-      BUG_REPORT_URL="https://bugzilla.redhat.com/"
-      REDHAT_BUGZILLA_PRODUCT="Fedora"
+      CPE_NAME=&amp;quot;cpe:/o:fedoraproject:fedora:38&amp;quot;
+      DEFAULT_HOSTNAME=&amp;quot;fedora&amp;quot;
+      HOME_URL=&amp;quot;https://fedoraproject.org/&amp;quot;
+      DOCUMENTATION_URL=&amp;quot;https://docs.fedoraproject.org/en-US/fedora/f38/system-administrators-guide/&amp;quot;
+      SUPPORT_URL=&amp;quot;https://ask.fedoraproject.org/&amp;quot;
+      BUG_REPORT_URL=&amp;quot;https://bugzilla.redhat.com/&amp;quot;
+      REDHAT_BUGZILLA_PRODUCT=&amp;quot;Fedora&amp;quot;
       REDHAT_BUGZILLA_PRODUCT_VERSION=38
-      REDHAT_SUPPORT_PRODUCT="Fedora"
+      REDHAT_SUPPORT_PRODUCT=&amp;quot;Fedora&amp;quot;
       REDHAT_SUPPORT_PRODUCT_VERSION=38
       SUPPORT_END=2024-05-14
-      VARIANT="Container Image"
+      VARIANT=&amp;quot;Container Image&amp;quot;
       VARIANT_ID=container
       </system-out>
          <failure type="FAIL" message='Test "/testing-farm/failure" failed.'/>
