--- a/tests/worker/public/tmt-container-failure.yaml
+++ b/tests/worker/public/tmt-container-failure.yaml
@@ -9,7 +9,7 @@ marks:
   - pipeline
 
 variables:
-  REQUEST_ID: 290096bb-311d-4962-a0b6-358f5db43c23
+  REQUEST_ID: 1893bcff-4327-46c1-8acd-c63238c11253
   ARCH: x86_64
   RESULT: FAILED
   GIT_CLONE_URL: https://gitlab.com/testing-farm/tests
@@ -18,7 +18,7 @@ variables:
 
 checks:
   literal-strings:
-    - "[W] [testing-farm-request] failed to post to webhook: Condition 'posting update to webhook https://invalid-url' failed to pass within given time"
+    - "[W] [testing-farm-request] failed to post to webhook: Condition 'posting update to webhook https://example.com/invalid-webhook' failed to pass within given time"
 
   literal-patterns[results.xml]:
     - |
