--- a/tests/worker/public/tmt-empty-plan-x86_64.yaml
+++ b/tests/worker/public/tmt-empty-plan-x86_64.yaml
@@ -21,7 +21,7 @@ variables:
 
 checks:
   literal-strings:
-    - "[testing-farm-request] Connected to Testing Farm Service"
+    - "[testing-farm-request] Connected to Testing Farm Service 'https://internal.api.staging.testing-farm.io'"
     - "[git] <RemoteGitRepository(clone_url={{ GIT_CLONE_URL }}, branch=not specified, ref={{ GIT_REF }})>"
     - "[coldstore] For the pipeline artifacts, see https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}"
     - "[{{ COMPOSE }}:{{ ARCH }}] looking for plans"
