--- a/tests/worker/redhat/pipeline/tmt-container.yaml
+++ b/tests/worker/redhat/pipeline/tmt-container.yaml
@@ -20,7 +20,7 @@ pipeline: |
 
 checks:
   literal-strings:
-    - "[testing-farm-request] Connected to Testing Farm Service 'https://internal.api.dev.testing-farm.io'"
+    - "[testing-farm-request] Connected to Testing Farm Service 'https://internal.api.staging.testing-farm.io'"
     - "[testing-farm-request] Initialized with 9e6fa113-a25a-43e1-bb27-671780f152d0:"
     - "[static-guest] added guest 'localhost' with architecture "
     - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/testing-farm/tests, branch=not specified, ref=main)>"
