Setup gitlab ci scheduled pipelines via terragrunt
So yeah, I got bored adding scheduled pipelines manually to the
infrastructure repository, so let's defined the in our infrastructure code.

This patch adds:

* a generic module under `gitlab/schedules` to create gitlab ci pipeline
  schedules
* a `infra` environment which will contain general infrastructure setup,
  like gitlab (later ideally hashicorp vault and similar)
* setup 2 schedules pipelines, one for `make cleanup/staging/ci` and one
  for staging redeployment during weekend (which I forgot to add before)
* add gitlab ci pipelines for testing and deploying

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -80,6 +80,7 @@ export TF_TOKEN_app_terraform_io="$(ansible-vault view --vault-password-file .va
 export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
 export TF_VAR_ansible_vault_credentials="credentials.yaml"
 export TF_VAR_ansible_vault_secrets_root="$PROJECT_ROOT/secrets"
+export TF_VAR_gitlab_testing_farm_bot="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.gitlab.testing_farm_bot_terragrunt.token)"
 
 #
 # Testing Farm tokens
