--- a/ranch/redhat/citool-config/state-map.yaml
+++ b/ranch/redhat/citool-config/state-map.yaml
@@ -32,4 +32,10 @@
     and "TMT metadata are absent or corrupted." in ERROR_MESSAGE
   state: complete
 
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Multiple provision phases not supported, refusing to continue." in ERROR_MESSAGE
+  state: complete
+
 # Default hard-coded rules apply for the rest - "error" when FAILURE exists, "complete" otherwise
