--- a/ranch/redhat/citool-config/summary-map.yaml
+++ b/ranch/redhat/citool-config/summary-map.yaml
@@ -32,3 +32,10 @@
     and "TMT metadata are absent or corrupted." in ERROR_MESSAGE
   reason: >-
     Failed to discover tests, TMT metadata are absent or corrupted. Search for '[E] [test-schedule-tmt' on the artifacts page for details.
+
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Multiple provision phases not supported, refusing to continue." in ERROR_MESSAGE
+  reason: >-
+    Multiple provision phases not supported in this pipeline. See https://docs.testing-farm.io/Testing%20Farm/0.1/test-request.html#multihost-testing for information on how to run the multihost pipeline.'
