workers: move to Fedora 39 cloud base image_id
So we want to move to newer Fedora as F36 is EOL.

Unfortunately F39 is using Python 3.12, which breaks `get_url` module.
The fix went into Ansible 2.16 but that requires Python 3.10+, and we
agreed on team level to stick to Python3.9 now.

So to resolve the issue, move to `curl` rather, similar fix went into
BaseOS CI some time ago.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/roles/nomad/tasks/install.yml
+++ b/ansible/roles/nomad/tasks/install.yml
@@ -14,9 +14,7 @@
   register: download
 
 - name: Download Nomad
-  get_url:
-    url: "{{ nomad_zip_url }}"
-    dest: "{{ download.path }}/{{ nomad_pkg }}"
+  command: "curl -Lo {{ download.path }}/{{ nomad_pkg }} {{ nomad_zip_url }}"
 
 - name: Unarchive Nomad
   unarchive:
